galaxy/all-in-one/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: galaxy-service
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: galaxy
